Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/enum/NoFinal5.out
NoFinal5.java:11:10: compiler.err.enum.no.finalize
1 error
